<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.nortal.jroad</groupId>
  <artifactId>xtee-root</artifactId>
  <packaging>pom</packaging>
  <name>x-tee root</name>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <version>4.3.1-SNAPSHOT</version>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <spring.ws.version>4.0.10</spring.ws.version>
    <skipTests>true</skipTests>
  </properties>
  <developers>
    <developer>
      <name>Dmitri Danilkin</name>
      <email>dmitri.danilkin@webmedia.ee</email>
    </developer>
    <developer>
      <name>Rando Mihkelsaar</name>
      <email>rando@webmedia.ee</email>
    </developer>
    <developer>
      <name>Roman Tekhov</name>
      <email>roman.tekhov@webmedia.ee</email>
    </developer>
  </developers>
  <contributors>
    <contributor>
      <name>Ats Uiboupin</name>
      <email>ats.uiboupin@webmedia.ee</email>
    </contributor>
    <contributor>
      <name>Imre Lumiste</name>
      <email>imre@changelogic.com</email>
    </contributor>
  </contributors>
  <profiles>
    <profile>
      <id>ossrh</id>
      <properties>
        <gpg.executable>gpg</gpg.executable>
        <gpg.keyname>${env.GPG_KEYNAME}</gpg.keyname>
        <gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>

      </properties>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.5</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.2</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>true</autoReleaseAfterClose>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>rmit</id>
      <distributionManagement>
        <repository>
          <id>repo.rmv</id>
          <name>RMIT internal repository</name>
          <url>http://repo.rmv/archiva/repository/internal/</url>
        </repository>
      </distributionManagement>
    </profile>

    <profile>
      <id>icefire</id>
      <distributionManagement>
        <repository>
          <id>icefire.nexus.internal</id>
          <name>Icefire Internal Repository</name>
          <url>http://srv-maven.icefire:8081/repository/maven-releases/</url>
        </repository>
      </distributionManagement>
    </profile>
  </profiles>
  <modules>
    <module>common</module>
    <module>client-transport</module>
    <module>client-service</module>
<!--  TODO: jakarta-17 server can be tested only when E1 is to be updated  -->
    <module>server</module>
    <module>typegen</module>
  </modules>
  <build>
	<plugins>
		<plugin>
			<inherited>true</inherited>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>2.3.2</version>
			<configuration>
				<source>17</source>
				<target>17</target>
			</configuration>
		</plugin>
		<plugin>
			<inherited>true</inherited>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-source-plugin</artifactId>
			<version>2.1.2</version>
			<executions>
				<execution>
					<id>attach-sources</id>
					<goals>
						<goal>jar</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>3.2.5</version>
			<configuration>
				<argLine>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</argLine>
				<forkCount>0</forkCount>
				<skip>${skipTests}</skip>
			</configuration>
		</plugin>
	</plugins>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ftp</artifactId>
        <version>1.0-beta-6</version>
      </extension>
    </extensions>
    <pluginManagement>
      <plugins>
        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <versionRange>[1.1.1,)</versionRange>
                    <goals>
                      <goal>java</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore/>
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>properties-maven-plugin</artifactId>
                    <versionRange>[1.0-alpha-2,)</versionRange>
                    <goals>
                      <goal>read-project-properties</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore/>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <dependencies>
    <dependency>
      <groupId>javax.xml.parsers</groupId>
      <artifactId>jaxp-api</artifactId>
      <version>1.4.5</version>
    </dependency>
  </dependencies>

  <distributionManagement>
    <repository>
      <uniqueVersion>false</uniqueVersion>
      <id>wm-local</id>
      <url>ftp://maven2.webmedia.int</url>
    </repository>
  </distributionManagement>

  <scm>
    <connection>scm:git:https://github.com/nortal/j-road</connection>
    <developerConnection>scm:git:https://github.com/nortal/j-road</developerConnection>
    <url>scm:git:https://github.com/nortal/j-road</url>
  </scm>
</project>
